syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.numbers";
option java_outer_classname = "NumberSequenceProto";

package numbers;

service NumberSequence {
  rpc GenerateSequence(NumberRange) returns (stream NumberValue);
}

message NumberRange {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberValue {
  int32 value = 1;
}
